// HomeScreen Component Tests - Simplified and Reliable
// Testing core functionality without complex async patterns

import React from 'react';
import { render, fireEvent, screen } from '@testing-library/react-native';
import HomeScreen from '../HomeScreen';

// Mock the useAuth hook
const mockLogout = jest.fn();
jest.mock('../../hooks/AuthProvider', () => ({
  useAuth: () => ({
    logout: mockLogout,
    isLoggedIn: true,
    login: jest.fn(),
    user: null,
  }),
}));

// Mock useColors hook
jest.mock('../../hooks/useColors', () => ({
  useColors: () => ({
    neutral: {
      beige: '#F7FFF7',
      midnight: '#1A535C',
    },
    primary: {
      teal: '#4ECDC4',
    },
  }),
}));

// Mock authService with simple sync behavior
const mockAuthService = {
  getCredentials: jest.fn(),
};
jest.mock('../../services/authService', () => ({
  __esModule: true,
  default: mockAuthService,
}));

// Simple Alert mock to avoid React Native complexity
const mockAlert = jest.fn();

// Mock Button component to avoid React Native dependencies
jest.mock('../../components/Button', () => {
  const React = require('react');
  const { TouchableOpacity, Text } = require('react-native');
  
  return function MockButton({ title, onPress, disabled, testID }: any) {
    return (
      <TouchableOpacity 
        onPress={disabled ? undefined : onPress} 
        testID={testID || 'button'}
        disabled={disabled}
      >
        <Text>{title}</Text>
      </TouchableOpacity>
    );
  };
});

describe('HomeScreen', () => {
  beforeEach(() => {
    jest.clearAllMocks();
    // Set default authService behavior
    mockAuthService.getCredentials.mockResolvedValue(null);
  });

  describe('Basic Rendering', () => {
    test('should render welcome title', () => {
      render(<HomeScreen />);
      
      const welcomeTitle = screen.getByText('Welcome to Pet Love Community!');
      expect(welcomeTitle).toBeTruthy();
    });

    test('should render logout button', () => {
      render(<HomeScreen />);
      
      const logoutButton = screen.getByText('Logout');
      expect(logoutButton).toBeTruthy();
    });

    test('should render welcome subtitle by default', () => {
      render(<HomeScreen />);
      
      // Should show "Welcome back!" when no user is loaded
      const subtitle = screen.queryByText('Welcome back!');
      expect(subtitle).toBeTruthy();
    });

    test('should render without crashing', () => {
      expect(() => render(<HomeScreen />)).not.toThrow();
    });
  });

  describe('User Interaction', () => {
    test('should respond to button press', () => {
      render(<HomeScreen />);
      
      const logoutButton = screen.getByText('Logout');
      
      // Should not throw when pressed
      expect(() => fireEvent.press(logoutButton)).not.toThrow();
    });

    test('should handle multiple button presses', () => {
      render(<HomeScreen />);
      
      const logoutButton = screen.getByText('Logout');
      
      // Should handle multiple presses without errors
      expect(() => {
        fireEvent.press(logoutButton);
        fireEvent.press(logoutButton);
        fireEvent.press(logoutButton);
      }).not.toThrow();
    });

    test('should have button with correct properties', () => {
      render(<HomeScreen />);
      
      const logoutButton = screen.getByText('Logout');
      expect(logoutButton).toBeTruthy();
    });
  });

  describe('Component Structure', () => {
    test('should have correct component hierarchy', () => {
      const { toJSON } = render(<HomeScreen />);
      const tree = toJSON();
      
      expect(tree).toBeTruthy();
      expect(tree).toMatchSnapshot();
    });

    test('should contain exactly one title', () => {
      render(<HomeScreen />);
      
      const titles = screen.getAllByText('Welcome to Pet Love Community!');
      expect(titles).toHaveLength(1);
    });

    test('should contain exactly one logout button', () => {
      render(<HomeScreen />);
      
      const logoutButtons = screen.getAllByText('Logout');
      expect(logoutButtons).toHaveLength(1);
    });
  });

  describe('Error Handling', () => {
    test('should handle missing dependencies gracefully', () => {
      // Test component resilience
      expect(() => render(<HomeScreen />)).not.toThrow();
    });

    test('should handle authService errors gracefully', () => {
      // Mock authService to reject
      mockAuthService.getCredentials.mockRejectedValue(new Error('Auth error'));
      
      // Should still render without crashing
      expect(() => render(<HomeScreen />)).not.toThrow();
      
      const welcomeTitle = screen.getByText('Welcome to Pet Love Community!');
      expect(welcomeTitle).toBeTruthy();
    });

    test('should handle logout function errors gracefully', () => {
      // Mock logout to throw an error
      mockLogout.mockRejectedValue(new Error('Logout error'));

      render(<HomeScreen />);
      
      const logoutButton = screen.getByText('Logout');
      
      // Should not throw when button is pressed (even if logout would fail)
      expect(() => fireEvent.press(logoutButton)).not.toThrow();
    });
  });

  describe('Accessibility', () => {
    test('should render title text accessibly', () => {
      render(<HomeScreen />);
      
      const title = screen.getByText('Welcome to Pet Love Community!');
      expect(title).toBeTruthy();
    });

    test('should render button accessibly', () => {
      render(<HomeScreen />);
      
      const button = screen.getByText('Logout');
      expect(button).toBeTruthy();
    });
  });

  describe('Styling Integration', () => {
    test('should use color system without errors', () => {
      // This test verifies useColors hook integration works
      expect(() => render(<HomeScreen />)).not.toThrow();
    });

    test('should render with proper layout', () => {
      const { toJSON } = render(<HomeScreen />);
      
      // Should render complete component tree
      expect(toJSON()).toBeTruthy();
    });
  });

  describe('Hook Integration', () => {
    test('should integrate with useAuth hook', () => {
      render(<HomeScreen />);
      
      // Verify useAuth hook provides logout function
      expect(mockLogout).toBeDefined();
    });

    test('should integrate with authService', () => {
      render(<HomeScreen />);
      
      // Verify authService.getCredentials is available for async calls
      expect(mockAuthService.getCredentials).toBeDefined();
    });
  });
});